changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------

common/object.c, include/config.h: Document the different levels of MEMORY_DEBUG
  and add a third level that calls free() instead of adding back to free list
  in order to more properly detect use after free.
Arvid Norlander 2009-02-01

common/object.c, include/config.h: Workaround to make MEMORY_DEBUG usable,
  currently we can't realloc on allocation to ensure the backtrace is correct
  (as the comment in the code described) since a lot of stuff access objects
  after freeing and fixing these are non-trivial. So disable realloc() for now
  unless MEMORY_DEBUG is defined to a value greater than 1. Also fix one of the
  accesses after free_object() (was in clean_friendly_list()).
Arvid Norlander 2009-02-01

common/re-cmp.c: Correct some #ifdef to use the correct variable name
  (SAFE_CHECKS not SAFE_CHECK).
Arvid Norlander 2009-02-01

include/define.h: Update comment about INORGANIC (type 73) including
  dragon scales. Making them type flesh had negative consequences such
  as making them edible and causing them to weigh 50000Kg instead of 25Kg
  each.
Rick Tanner 2009-01-31

common/player.c, include/libproto.h, server/player.c: Fix a few memory leaks
  if player selects "play again" after logging out.
Arvid Norlander 2009-01-29

plugins/cfpython/cfpython.c: Remove some Py_DECREF() calls in the python module.
  This fixes bug #2459929 (DECREF error, bombs server if python is strict).
  However, I'm not sure this is the correct way to fix that bug.
Arvid Norlander 2009-01-29

macros/cf_python.m4: Add python 2.6 to the python path search lists as well.