@@ -99,14 +99,14 @@ extern int get_power_from_ench(int ench);
 extern int calc_item_power(const object *op, int flag);
 extern const typedata *get_typedata(int itemtype);
 extern const typedata *get_typedata_by_name(const char *name);
-extern void describe_resistance(const object *op, int newline, char *buf, int size);
-extern void query_weight(const object *op, char *buf, int size);
-extern void get_levelnumber(int i, char *buf, int size);
-extern void query_short_name(const object *op, char *buf, int size);
-extern void query_name(const object *op, char *buf, int size);
-extern void query_base_name(const object *op, int plural, char *buf, int size);
-extern void describe_monster(const object *op, char *retbuf, int size);
-extern void describe_item(const object *op, const object *owner, char *retbuf, int size);
+extern void describe_resistance(const object *op, int newline, char *buf, size_t size);
+extern void query_weight(const object *op, char *buf, size_t size);
+extern void get_levelnumber(int i, char *buf, size_t size);
+extern void query_short_name(const object *op, char *buf, size_t size);
+extern void query_name(const object *op, char *buf, size_t size);
+extern void query_base_name(const object *op, int plural, char *buf, size_t size);
+extern void describe_monster(const object *op, char *retbuf, size_t size);
+extern void describe_item(const object *op, const object *owner, char *retbuf, size_t size);
 extern int is_magical(const object *op);
 extern int need_identify(const object *op);
 extern void identify(object *op);
